# Clove

./: .env.example  .gitignore  CMakeLists.txt  MANUAL_TEST_SUITE.md  PLAN_KERNEL_EXTENSIONS.md  README.md  STATUS.md  SYSTEM_DESIGN.md  fibonacci.py  test.py  vcpkg.json
agents/adapters/: README.md  __init__.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py
agents/dashboard/: QUICKSTART.md  README.md  index.html  metrics_tui.py  ws_proxy.py
agents/dataLogs/: README.md  analyzer.py  monitor.py
agents/examples/: README.md  code_reviewer_agent.py  coding_agent.py  cpu_hog_agent.py  echo_test.py  fault_isolation_demo.py  fibonacci_orchestrator.py  fork_bomb_agent.py  health_check.py  healthy_agent.py  hello_agent.py  ipc_demo.py  llm_contention_demo.py  llm_requester_agent.py  memory_hog_agent.py  network_test_agent.py  parser_agent.py  pipeline_demo.py  reasoner_agent.py  security_demo.py  spawn_test.py  supervisor_agent.py  supervisor_demo.py  thinking_agent.py  unstable_agent.py  verifier_agent.py  worker_agent.py  world_demo.py
agents/llm_service/: README.md  llm_service.py
agents/mcp/: README.md  mcp_server.py
agents/python_sdk/: README.md  agentic.py  agentos.py
agents/python_sdk/clove_sdk/: client.py
benchmarks/: metrics.py
benchmarks/runners/: clove_runner.py
benchmarks/tasks/: agent.py  ipc.py
cli/commands/: agent.py
demo/: PLAN.md
demo/without_clove/research_world/: README.md
demos/: crash_isolation_demo.py
docs/: architecture.md  browser_extension_plan.md  getting-started.md  syscalls.md
scripts/: install.sh  run_dashboard.sh  run_kernel.sh
src/: main.cpp
src/ipc/: protocol.hpp  socket_server.cpp
src/kernel/: audit_log.cpp  audit_log.hpp  execution_log.cpp  execution_log.hpp  kernel.cpp  kernel.hpp  llm_client.cpp  llm_client.hpp  permissions.cpp  permissions.hpp
src/runtime/: agent_process.cpp  agent_process.hpp  sandbox.cpp  sandbox.hpp
src/util/: logger.cpp
test_suite/: 01_connection.py  02_file_operations.py  03_llm_query.py  04_ipc.py  05_shell_exec.py  06_agent_management.py  07_http_request.py  08_permissions.py  09_events.py  10_state_store.py  11_metrics.py  12_pause_resume.py  13_audit_logging.py  14_execution_replay.py  README.md  run_all.py
tests/: test_restart.py
worlds/examples/research_team/: README.md  __init__.py  benchmark.py  clove_multiprocess.py  clove_version.py  langgraph_version.py
worlds/examples/research_team/benchmark_results/: research_team_benchmark_20260122_060846.json  research_team_benchmark_20260122_061143.json  research_team_benchmark_20260122_061233.json  research_team_benchmark_20260122_061446.json  research_team_benchmark_20260122_061709.json  research_team_benchmark_20260122_061916.json  research_team_benchmark_20260122_062212.json  research_team_benchmark_20260122_062224.json  research_team_benchmark_20260122_062336.json  research_team_benchmark_20260122_062846.json  research_team_benchmark_20260122_063019.json  research_team_benchmark_20260122_063036.json  research_team_benchmark_20260122_064500.json
